test/iam/policybinding-org-restrictions/04-project-b.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Project
metadata:
  name: pb-project-b
  labels:
    test.miloapis.com/scenario: "policybinding-org-restrictions"
spec:
  ownerRef:
    kind: Organization
    name: pb-org-b
