test/iam/policybinding-org-restrictions/assertions/assert-policybinding-valid.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: PolicyBinding
metadata:
  name: pb-valid
  namespace: organization-pb-org-a
spec:
  roleRef:
    name: some-role
    namespace: datum-cloud
  subjects:
    - kind: ServiceAccount
      name: pb-robot-a
      uid: 11111111-1111-1111-1111-111111111111
  resourceSelector:
    resourceRef:
      apiGroup: resourcemanager.miloapis.com
      kind: Project
      name: pb-project-a
      uid: aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
